# ncs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.md~  cmake_uninstall.cmake.in
applications/simulator/: generator.py  geometry_generator.py  json_model.py  model_parameters.py  simulator.py
base/: CMakeLists.txt  SimData.pb.cc  SimData.pb.h  ncs.i  pyncs.i  pyncs.py  pyncsPYTHON_wrap.cxx  pyncs_wrap.c
base/include/ncs/cuda/: CUDA.h  FireTableUpdater.cuh  MemoryExtractor.h
base/include/ncs/proto/: ModelParameters.proto  SimData.proto  SimData_pb2.py
base/include/ncs/sim/: .InputUpdateParameters.h.swo  AtomicWriter.h  AtomicWriter.hpp  Bit.h  CUDA.h  CUDADevice.h  ClusterDescription.h  Constants.h  DataBuffer.h  DataBuffer.hpp  DataDescription.h  DataSink.h  DataSpace.h  DataType.h  Dataspace.h  Device.h  Device.hpp  DeviceBase.h  DeviceDescription.h  DeviceNeuronStateBuffer.h  DeviceNeuronStateBuffer.hpp  DeviceType.h  Distributor.h  FactoryMap.h  FactoryMap.hpp  File.h  FireTable.h  FireTable.hpp  FireTableUpdater.h  FireTableUpdater.hpp  GlobalFireVectorBuffer.h  GlobalNeuronStateBuffer.h  GlobalNeuronStateBuffer.hpp  Input.h  InputBuffer.h  InputBuffer.hpp  InputSimulator.h  InputUpdateParameters.h  InputUpdater.h  InputUpdater.hpp  (+44 more)
base/include/ncs/spec/: AsciiSink.h  AsciiStream.h  AsciiStream.hpp  BoxGenerator.h  ClientSocket.h  DataSource.h  ExactGenerator.h  Generator.h  Geometry.h  GeometryGenerator.h  InputGroup.h  ModelParameters.h  ModelSpecification.h  NeuronAlias.h  NeuronGroup.h  NormalGenerator.h  NullSink.h  Report.h  SimulationParameters.h  Socket.h  SocketException.h  SynapseAlias.h  SynapseGroup.h  UniformGenerator.h
base/source/cuda/: FireTableUpdater.cu  MemoryExtractor.cu
base/source/sim/: Bit.cpp  CUDA.cpp  CUDADevice.cpp  ClusterDescription.cpp  DataBuffer.cpp  DataDescription.cpp  DataSink.cpp  DataType.cpp  Device.cpp  DeviceBase.cpp  DeviceDescription.cpp  DeviceType.cpp  File.cpp  FireTableUpdater.cpp  GlobalFireVectorBuffer.cpp  Location.cpp  MPI.cpp  MachineDescription.cpp  MemoryExtractor.cpp  ModelStatistics.cpp  NormalGenerator.cpp  Parallel.cpp  PluginDescription.cpp  PublisherExtractor.cpp  ReportController.cpp  ReportDataBuffer.cpp  ReportManager.cpp  ReportReceiver.cpp  ReportSender.cpp  ReportSyncer.cpp  Signal.cpp  Simulation.cpp  SimulationController.cpp  SimulationProperties.cpp  Simulator.cpp  StepSignal.cpp  VectorExchanger.cpp
base/source/spec/: AsciiSink.cpp  AsciiStream.cpp  BoxGenerator.cpp  ClientSocket.cpp  DataSource.cpp  ExactGenerator.cpp  Generator.cpp  InputGroup.cpp  ModelParameters.cpp  NeuronAlias.cpp  NeuronGroup.cpp  NormalGenerator.cpp  NullSink.cpp  Report.cpp  SimulationParameters.cpp  Socket.cpp  SynapseAlias.cpp  SynapseGroup.cpp  UniformGenerator.cpp
modeling/: ModelSpecification.py
plugins/: CMakeLists.txt
plugins/input/: CMakeLists.txt
plugins/input/linear/: CMakeLists.txt
plugins/input/linear/include/: Linear.cuh  Linear.h  Linear.hpp
plugins/input/linear/source/: Linear.cpp  Linear.cu
plugins/input/rectangular/: CMakeLists.txt
plugins/input/rectangular/include/: Rectangular.cuh  Rectangular.h  Rectangular.hpp
plugins/input/rectangular/source/: Rectangular.cpp  Rectangular.cu
plugins/input/sine/: CMakeLists.txt
plugins/input/sine/include/: Sine.cuh  Sine.h  Sine.hpp
plugins/input/sine/source/: Sine.cpp  Sine.cu
plugins/neuron/: CMakeLists.txt
plugins/neuron/hh/: CMakeLists.txt
plugins/neuron/hh/include/: Channel.h  Channel.hpp  HH.cuh  HH.h  HH.hpp
plugins/neuron/hh/source/: HH.cpp  (+1 more)
plugins/neuron/izhikevich/: CMakeLists.txt
plugins/neuron/ncs/: CMakeLists.txt
plugins/synapse/: CMakeLists.txt
plugins/synapse/flat/: CMakeLists.txt
plugins/synapse/ncs/: CMakeLists.txt
plugins/synapse/ncs/include/: NCS.cuh  NCS.h  NCS.hpp
plugins/synapse/ncs/source/: NCS.cpp  NCS.cu
python/: bursting_izh.py  flat_test.py  hh_neuron_test.py  input_test.py  json_full.txt  json_izh_output.txt  json_single_group.txt  json_synapse.txt  model.py  mongodb_test.py  ncs.py  ncs_neuron_test.py  ncs_synapse_test.py  regular_spiking.py  regular_spiking_izh.txt  sample.py  script_to_json_test.py  server.py  simulator.py  streamedData.txt
python/NCB JSON Samples/: json.txt  json_stims_reports.txt
python/Twisted Server/: add_user.py  authenticator.py  client.py  credentials_checker.py  data_receiver.py  fake_add_user.py  fake_ncb.py  json_recvd.txt  json_recvd_all_cell_types.txt  json_schema.txt  launch_sim_NOT_USED.py  model.py  regular_spiking_izh_test.py  script.py  script_parse_test.py  script_to_json.py  script_to_json.py~  server_daemon.py  sim_subprocess.py  simulation.py  stream_data_proxy.py  test_json.json  testfile  twisted_server.py
python/Twisted Server/Test Scripts/: fake_ncb.py  ncb_json.json
python/Twisted Server/Unused/: script_to_json_old.py  stream_data_proxy.py
python/Twisted Server/data/: fifo_read_test.py
python/Twisted Server/txmongo/: PKG-INFO
python/samples/: sample.py
python/samples/brain_navigation/: synapses_pcrain.py
python/socket test (Edson)/: reg_voltage_report.txt  server.py
python/socket test (Edson)/static/: index.html
samples/: brain_specification.py
samples/brain_navigation/: anatomy_pcrain.py  brain_navigation.py
samples/models/izh/: bursting_izh.py  chattering_izh.py  fast_spiking_izh.py  intrinsically_bursting_izh.py  low_threshold_spiking.py  low_threshold_spiking_izh.py  mixed_mode_izh.py  ncs_neuron_test.py  ncs_synapse_test.py  phasic_spiking_izh.py  regular_spiking_izh.py  regular_spiking_synapse.py  template.py  thalamo_cortical_izh.py  tonic_bursting_izh.py
samples/models/lif/: fast_spiking_lif.py  regular_spiking_lif.py
samples/specification/json/: input.json  model.json  report.json  submodel.json
specification/: CMakeLists.txt  ncs_spec.i
specification/include/: ExactGenerator.h  Generator.h  Geometry.h  GeometryGenerator.h  NeuronSpecification.h  Specification.h  SynapseSpecification.h
specification/source/: ExactGenerator.cpp  Generator.cpp  NeuronSpecification.cpp  SynapseSpecification.cpp
(+72 files in other folders)
