CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(SLUG)

SET(SLUG_CUDA TRUE)
IF(SLUG_CUDA)
	ADD_DEFINITIONS(-DSLUG_CUDA)
ENDIF(SLUG_CUDA)

#ADD_DEFINITIONS(-DDEBUG)
#ADD_DEFINITIONS(-pg)
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${SLUG_SOURCE_DIR}/CMakeModules")
SET(SLUG_PLUGIN_PATH "${CMAKE_INSTALL_PREFIX}/slug/plugins")
SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
SET(CXX11_FLAGS -std=gnu++0x)
SET(SLUG_INCLUDES "${SLUG_SOURCE_DIR}/slug/include")

IF (SLUG_CUDA)
  FIND_PACKAGE(CUDA)
  SET(CUDA_OPTIONS -arch sm_21)
  IF (${CUDA_VERSION_MAJOR} LESS 5)
    SET(CUDA_OPTIONS -arch sm_21 -ccbin=/usr/bin/g++-4.4) 
  ENDIF (${CUDA_VERSION_MAJOR} LESS 5)
ENDIF (SLUG_CUDA)

IF(UNIX)
	ADD_DEFINITIONS(-DUNIX)
ENDIF(UNIX)

ADD_SUBDIRECTORY(base)

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
				"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
				IMMEDIATE @ONLY)

ADD_CUSTOM_TARGET(uninstall
				  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")

