PROJECT(ncs_spec)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
AUX_SOURCE_DIRECTORY("source" source)
INCLUDE_DIRECTORIES("include")
ADD_LIBRARY(ncs_spec SHARED ${source})

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")
SET_SOURCE_FILES_PROPERTIES("ncs_spec.i" PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES("ncs_spec.i" PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(ncs_spec python "ncs_spec.i" ${source})
SWIG_LINK_LIBRARIES(ncs_spec ${PYTHON_LIBRARIES})
